--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ cache:
   directories:
     - node_modules
 node_js: lts/*
+before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash
+  - export PATH="$HOME/.yarn/bin:$PATH"
 jobs:
   include:
     - stage: test
